# Anything

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_cli.sh  build_gui.sh  builddeps.sh
config/: anything.json
src/: CMakeLists.txt
src/anything/: ATVector.h  Anything.cpp  Anything.h  AnythingConfig.cpp  AnythingConfig.h  FileEnumerator.cpp  FileEnumerator.h  JsonUtil.h  Log.h  StringUtil.h
src/cli/: main.cpp
src/qtgui/anythinggui/: CMakeLists.txt  anythingitemmodel.cpp  anythingitemmodel.h  mainwindow.cpp  mainwindow.h  simplethreadsafequeue.h
src/tests/: test_atvector.cpp  test_cppfs.cpp  test_log.cpp
